# low-latency-search-api

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requests.http  requirements.txt
app/: main.py
app/core/: index_lexical.py  models.py  planner.py  rank_lexical.py  state.py
app/routes/: health.py  index.py  search.py  warmup.py
app/utils/: timing.py  tokenization.py
docker/: Dockerfile
scripts/: bench_httpx.py
tests/: test_health.py  test_index_search_bm25.py  test_latency_headers.py  test_search_stub.py
