[project]
name = "low-latency-search-api"
version = "0.1.0"
description = "Low-Latency Search API (Exa-aligned)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "orjson>=3.10.0",
  "numpy>=1.26"
]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8000

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict = true
plugins = []

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]
ignore = []
